# bwf-ranking-prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
api/: dependencies.py  main.py
api/routes/: health.py  predict.py  rankings.py
api/schemas/: request.py  response.py
data/processed/: latest_features_MD_Global.csv  latest_features_MS_Asia.csv  latest_features_MS_Europe.csv  latest_features_MS_Global.csv  latest_features_WD_Global.csv  latest_features_WS_Asia.csv  latest_features_WS_Europe.csv  latest_features_WS_Global.csv  latest_features_XD_Global.csv
frontend/src/: App.jsx  index.css
models/: lgbm_ms_asia_v1.0.0.pkl  lgbm_ms_asia_v2.0.0.pkl  lgbm_xd_global_v1.0.0.pkl  lightgbm_ms_asia.pkl  lightgbm_xd_global.pkl  registry.json
reports/: feature_importance_MD_Global.csv  feature_importance_MS_Asia.csv  feature_importance_MS_Global.csv  feature_importance_WD_Global.csv  feature_importance_WS_Global.csv  feature_importance_XD_Global.csv  model_summary_2026-05-10.csv
scripts/: evaluate.py  prepare_inference_data.py  train.py
src/: config.py
src/data/: feature_engine.py  loader.py  preprocessor.py
src/evaluation/: metrics.py
src/mlops/: reporter.py  tracker.py  tuner.py
src/models/: predictor.py  registry.py  trainer.py
src/utils/: logger.py
tests/: test_api_local.py  test_data.py
