[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bwf-ranking-prediction"
version = "1.0.0"
description = "Hybrid LightGBM + LSTM model for predicting BWF Badminton World Rankings up to 2035"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Hà Nhật Nguyên Vũ", email = "woocsin@example.com" }
]
keywords = ["badminton", "BWF", "machine-learning", "ranking", "prediction", "lightgbm", "lstm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]
mlops = [
    "mlflow>=2.8.0",
    "dvc>=3.0.0",
    "optuna>=3.4.0",
]
monitoring = [
    "streamlit>=1.28.0",
    "evidently>=0.4.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.0.0",
]
all = [
    "bwf-ranking-prediction[api,mlops,monitoring,dev]"
]

[project.scripts]
bwf-train = "scripts.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "scripts*", "monitoring*"]

# ── Black (code formatter) ────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

# ── Ruff (linter) ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]
exclude = ["notebooks/", "data/", "models/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
